# robot2019

./: .gitignore  tes.py
back_camera/: CMakeLists.txt  package.xml
back_camera/backcamera/: CMakeLists.txt  apriltag_detector.cpp  apriltag_detector.h  armor_detection_base.h  backcamera_client.cpp  backcamera_node.cpp  backcamera_node.h
back_camera/backcamera/config/: armor_detection.prototxt
back_camera/backcamera/constraint_set/: CMakeLists.txt  constraint_set.cpp  constraint_set.h
back_camera/backcamera/include/AprilTags/: TagDetection.h
back_camera/backcamera/proto/: armor_detection.pb.cc  armor_detection.proto
back_camera/backcamera/src/: TagDetection.cc
back_camera/util/: CMakeLists.txt  cv_toolbox.h
cam_input/: CMakeLists.txt
cam_input/src/: cam.cpp  cam_roi.cpp
initial_pose/: CMakeLists.txt  package.xml  目前的进度
initial_pose/config/: initialpose.yaml
initial_pose/include/: initialpose_config.hpp  initialpose_estimation.hpp  initialpose_g2o.hpp  initialpose_include.hpp  initialpose_node.hpp  likelihood_match.hpp
initial_pose/launch/: initial_pose.launch
initial_pose/src/: initialpose_estimation.cpp  initialpose_g2o.cpp  initialpose_publish.cpp  likelihood_match.cpp  new_initial_pose.cpp
roborts_base/chassis/: chassis.cpp
roborts_base/gimbal/: gimbal.cpp
roborts_base/referee_system/: referee_system.cpp
roborts_base/roborts_sdk/protocol/: protocol.cpp
roborts_bringup/launch/: game_r1.launch  game_r2.launch  group_a3.launch  group_a3_robot1.launch  group_coor_a3.launch  group_coor_a3_robot1.launch  group_coor_a3_robot2.launch  group_coor_rviz_a3.launch  group_coor_rviz_a3_robot1.launch  group_coor_rviz_a3_robot2.launch  group_rviz_a3.launch  group_rviz_a3_robot1.launch  group_rviz_a3_robot2.launch  group_stage.launch  multimaster_discovery.launch  multimaster_sync.launch  multimaster_sync_robot1.launch  multimaster_sync_robot2.launch  roborts_a3.launch  roborts_hokuyo.launch  roborts_rviz.launch  roborts_rviz_a3.launch  roborts_rviz_hokuyo.launch  roborts_stage.launch  rviz_decision.launch  rviz_decision_joy.launch  static_tf.launch  test_group_a3_robot1.launch
roborts_bringup/maps/: icra2019-bk.pgm  icra2019.pgm  icra2019.xcf
roborts_bringup/maps/other_map/: icra2019(1).pgm
roborts_bringup/rviz/: group_robot1.rviz  group_robot2.rviz  roborts.rviz
roborts_bringup/scripts/udev/: roborts.rules
roborts_camera/: camera_node.cpp
roborts_camera/config/: camera_param.prototxt
roborts_camera/uvc/: uvc_driver.cpp
roborts_costmap/: CMakeLists.txt  package.xml
roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt  virtual_layer_config.prototxt
roborts_costmap/include/costmap/: costmap_interface.h  inflation_layer.h  layer.h  observation_buffer.h  obstacle_layer.h  virtual_layer.h
roborts_costmap/proto/: costmap_parameter_setting.pb.cc  costmap_parameter_setting.proto  obstacle_layer_setting.pb.cc  obstacle_layer_setting.proto  virtual_layer_setting.proto
roborts_costmap/src/: costmap_interface.cpp  inflation_layer.cpp  layer.cpp  observation_buffer.cpp  obstacle_layer.cpp  virtual_layer.cpp
roborts_decision/: CMakeLists.txt  behavior_test.cpp  behavior_tree_test.cpp  dual_tree_test (copy).cpp  dual_tree_test.cpp  test.cpp
roborts_decision/behavior_tree/: action_node.h  behavior_node.h  behavior_tree.h
roborts_decision/blackboard/: blackboard.cpp  blackboard.h  blackboard_enum.h
roborts_decision/config/: decision.prototxt
roborts_decision/example_behavior/: back_boot_area_behavior.h  buff_behavior.h  buff_chase_behavior.h  chase_behavior.h  escape_behavior.h  getoutfromstuck_behavior.h  goal_behavior.h  patrol_behavior.h  round_behavior.h  search_behavior.h  shoot_behavior.h  supply_behavior.h  support_behavior.h  turntohurt_behavior.h
roborts_decision/example_behavior (copy)/: chase_behavior.h  patrol_behavior.h  round_behavior.h  search_behavior.h  shoot_behavior.h  supply_behavior.h  support_behavior.h
roborts_decision/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h  shoot_executor.cpp  shoot_executor.h
roborts_decision/proto/: decision.pb.cc  decision.proto
roborts_detection/: CMakeLists.txt
roborts_detection/armor_detection/: armor_detection_base.h  armor_detection_node.cpp  armor_detection_node.h  gimbal_control.cpp  gimbal_control.h
roborts_detection/armor_detection/config/: armor_detection.prototxt
roborts_detection/armor_detection/constraint_set/: CMakeLists.txt  constraint_set.cpp  constraint_set.h  contourHOG_SVM  filter.h  shoot_executor.h  svm.cpp  svm.h
roborts_detection/armor_detection/constraint_set/config/: constraint_set.prototxt
roborts_detection/armor_detection/constraint_set/proto/: constraint_set.pb.cc  constraint_set.proto
roborts_detection/armor_detection/proto/: armor_detection.pb.cc  armor_detection.proto
roborts_detection/util/: cv_toolbox.h
roborts_localization/: localization_config.h  localization_node.cpp  localization_node.h
roborts_localization/amcl/: amcl.cpp
roborts_localization/amcl/config/: amcl.yaml
roborts_localization/config/: localization.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/action/: ArmorDetection.action  BackCamera.action
roborts_msgs/msg/: BulletVacant.msg  EnemyInfo.msg  PartnerInformation.msg
roborts_planning/global_planner/a_star_planner/: a_star_planner.cpp
roborts_planning/global_planner/config/: global_planner_config.prototxt
roborts_planning/local_planner/src/: local_planner_node.cpp
roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
roborts_planning/local_planner/timed_elastic_band/src/: teb_optimal.cpp
